# backend/src/swagger.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.0
 info:
-  title: My Food Ordering API
+  title: My Pizza Ordering API
   description: An API for managing food orders
   version: 1.0.0
 servers:
@@ -36,7 +36,7 @@ paths:
       responses:
         '200':
           description: The created food
-  /foods/{id}:
+  /foods/food/{id}:
     get:
       summary: Get a food by ID
       parameters:
@@ -87,52 +87,3 @@ paths:
       responses:
         '200':
           description: Registered successfully
-  /orders/create:
-    post:
-      summary: Create a new order
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                items:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      food:
-                        type: object
-                      price:
-                        type: number
-                      quantity:
-                        type: integer
-                name:
-                  type: string
-                address:
-                  type: string
-                paymentId:
-                  type: string
-      responses:
-        '200':
-          description: The created order
-  /orders/all:
-    get:
-      summary: Get all orders for the authenticated user
-      responses:
-        '200':
-          description: A list of orders
-  /orders/{id}:
-    get:
-      summary: Get an order by ID
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: The ID of the order to retrieve
-          schema:
-            type: string
-      responses:
-        '200':
-          description: The requested order
